--- a/index.html
+++ b/index.html
@@ -228,15 +228,15 @@
                 <div class="contact-info">
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
-                        <p>lavoro.cellura@gmail.com</p>
+                        <p><a href="mailto:lavoro.cellura@gmail.com">lavoro.cellura@gmail.com</a></p>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
-                        <p>+39 3881543973</p>
+                        <p><a href="tel:+393881543973">+39 3881543973</a></p>
                     </div>
                     <div class="contact-item">
                         <i class="fab fa-instagram"></i>
-                        <p>@Kevin_ck8</p>
+                        <p><a href="https://www.instagram.com/Kevin_ck8/" target="_blank">@Kevin_ck8</a></p>
                     </div>
                     <div class="social-links">
                         <a href="mailto:lavoro.cellura@gmail.com" class="social-icon" aria-label="Email"><i class="fas fa-envelope"></i></a>
